@@ -976,14 +976,16 @@ class PageTest(PageTestBase):
 
 class PermissionsTestCase(CMSTestCase):
 
-    def _add_plugin_to_page(self, page, plugin_type='LinkPlugin', language='en'):
+    def _add_plugin_to_page(self, page, plugin_type='LinkPlugin', language='en', publish=True):
         plugin_data = {
             'TextPlugin': {'body': 'text'},
             'LinkPlugin': {'name': 'A Link', 'url': 'https://www.django-cms.org'},
         }
         placeholder = page.placeholders.get(slot='body')
         plugin = add_plugin(placeholder, plugin_type, language, **plugin_data[plugin_type])
-        page.reload().publish('en')
+
+        if publish:
+            page.reload().publish(language)
         return plugin
 
     def _add_translation_to_page(self, page):
@@ -1485,6 +1487,85 @@ class PermissionsOnGlobalTest(PermissionsTestCase):
             response = self.client.post(endpoint, data)
             self.assertEqual(response.status_code, 403)
             self.assertTrue(self._translation_exists())
+
+    def test_user_can_revert_non_empty_page_to_live(self):
+        """
+        User can revert a page to live with plugins if he has change permissions
+        on the Page model, delete permissions on the plugins in the translation
+        being reverted and page change permissions.
+        """
+        page = self.get_permissions_test_page()
+        staff_user = self.get_staff_user_with_no_permissions()
+        translation = self._add_translation_to_page(page)
+        endpoint = self.get_admin_url(
+            Page,
+            'revert_to_live',
+            page.pk,
+            translation.language,
+        )
+        live_page = page.publisher_public
+        draft_plugins = page.placeholders.get(slot='body').get_plugins(translation.language)
+        live_plugins = live_page.placeholders.get(slot='body').get_plugins(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language)
+
+        page.publish(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language, publish=False)
+
+        self.add_permission(staff_user, 'change_page')
+        self.add_permission(staff_user, 'delete_link')
+        self.add_global_permission(staff_user, can_change=True)
+
+        with self.login_user_context(staff_user):
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
+
+            data = {'language': translation.language}
+
+            self.client.post(endpoint, data)
+            self.assertEqual(draft_plugins.count(), 1)
+            self.assertEqual(live_plugins.count(), 1)
+
+    def test_user_cant_revert_non_empty_page_to_live(self):
+        """
+        User can't revert a page with plugins to live if he
+        does not have has change permissions on the Page model,
+        delete permissions on the plugins in the translation
+        being reverted and/or does not have page change permissions.
+        """
+        page = self.get_permissions_test_page()
+        staff_user = self.get_staff_user_with_no_permissions()
+        translation = self._add_translation_to_page(page)
+        endpoint = self.get_admin_url(
+            Page,
+            'revert_to_live',
+            page.pk,
+            translation.language,
+        )
+        live_page = page.publisher_public
+        draft_plugins = page.placeholders.get(slot='body').get_plugins(translation.language)
+        live_plugins = live_page.placeholders.get(slot='body').get_plugins(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language)
+
+        page.publish(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language, publish=False)
+
+        self.add_permission(staff_user, 'change_page')
+        self.add_global_permission(staff_user, can_change=True)
+
+        with self.login_user_context(staff_user):
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
+
+            data = {'language': translation.language}
+            response = self.client.post(endpoint, data)
+
+            self.assertEqual(response.status_code, 403)
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
 
     def test_user_can_view_page_permissions_summary(self):
         """
@@ -2903,6 +2984,93 @@ class PermissionsOnPageTest(PermissionsTestCase):
             response = self.client.post(endpoint, data)
             self.assertEqual(response.status_code, 403)
             self.assertTrue(self._translation_exists())
+
+    def test_user_can_revert_non_empty_page_to_live(self):
+        """
+        User can revert a page to live with plugins if he has change permissions
+        on the Page model, delete permissions on the plugins in the translation
+        being reverted and page change permissions.
+        """
+        page = self._permissions_page
+        staff_user = self.get_staff_user_with_no_permissions()
+        translation = self._add_translation_to_page(page)
+        endpoint = self.get_admin_url(
+            Page,
+            'revert_to_live',
+            page.pk,
+            translation.language,
+        )
+        live_page = page.publisher_public
+        draft_plugins = page.placeholders.get(slot='body').get_plugins(translation.language)
+        live_plugins = live_page.placeholders.get(slot='body').get_plugins(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language)
+
+        page.publish(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language, publish=False)
+
+        self.add_permission(staff_user, 'change_page')
+        self.add_permission(staff_user, 'delete_link')
+        self.add_page_permission(
+            staff_user,
+            page,
+            can_change=True,
+        )
+
+        with self.login_user_context(staff_user):
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
+
+            data = {'language': translation.language}
+
+            self.client.post(endpoint, data)
+            self.assertEqual(draft_plugins.count(), 1)
+            self.assertEqual(live_plugins.count(), 1)
+
+    def test_user_cant_revert_non_empty_page_to_live(self):
+        """
+        User can't revert a page with plugins to live if he
+        does not have has change permissions on the Page model,
+        delete permissions on the plugins in the translation
+        being reverted and/or does not have page change permissions.
+        """
+        page = self._permissions_page
+        staff_user = self.get_staff_user_with_no_permissions()
+        translation = self._add_translation_to_page(page)
+        endpoint = self.get_admin_url(
+            Page,
+            'revert_to_live',
+            page.pk,
+            translation.language,
+        )
+        live_page = page.publisher_public
+        draft_plugins = page.placeholders.get(slot='body').get_plugins(translation.language)
+        live_plugins = live_page.placeholders.get(slot='body').get_plugins(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language)
+
+        page.publish(translation.language)
+
+        self._add_plugin_to_page(page, language=translation.language, publish=False)
+
+        self.add_permission(staff_user, 'change_page')
+        self.add_page_permission(
+            staff_user,
+            page,
+            can_change=True,
+        )
+
+        with self.login_user_context(staff_user):
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
+
+            data = {'language': translation.language}
+            response = self.client.post(endpoint, data)
+
+            self.assertEqual(response.status_code, 403)
+            self.assertEqual(draft_plugins.count(), 2)
+            self.assertEqual(live_plugins.count(), 1)
 
     def test_user_can_add_page_permissions(self):
         """
